addons/ingress/prometheus-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: pathprefix
spec:
  rules:
  - host: prometheus.wocloud.guian.local
    http:
      paths:
      - path: /
        backend:
          serviceName: modest-tuatara-prometheus-server
          servicePort: 80
